# Npu-Course-selection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bidflow/: __main__.py
configs/: realistic_three_rounds.yaml  simple_model.yaml
docs/: 00_problem_definition_simple.md  01_problem_definition_realistic.md  02_experiment_plan.md  03_formula_note_deferred.md  04_formula_analysis_and_information_effect.md  04_utility_and_formula_analysis.md  04_utility_function_model.md  05_intra_round_dynamic_bidding.md  06_llm_experiment_statistical_observations.md  generator_scenarios.md  legacy_entrypoints.md  reproducible_experiments.md  sandbox_guide.md
outputs/: README.md
prompts/: advanced_formula_informed_system_prompt.md  formula_informed_system_prompt.md  single_round_all_pay_system_prompt.md  strategy_explanation_prompt.md  student_decision_prompt.md  tool_based_system_prompt.md
reports/: README.md  architecture_optimization_token_reduction.md
scripts/: README.md  run_research_large_behavioral.ps1  run_s048_cass_online.ps1  run_s048_cass_replay.ps1  run_s048_mix30_market.ps1  run_smoke.ps1
spec/: 00_mvp_requirements.md  01_data_inputs.md  02_llm_interaction_model.md  03_runtime_flow.md  04_outputs.md  05_code_modules.md  06_full_dataset_generation_spec.md  07_full_dataset_distribution_review_spec.md  08_llm_online_inference_api_spec.md  09_tool_based_interaction_spec.md  10_formula_strategy_evaluation_spec.md  10_llm_output_logging_spec.md  11_formula_behavioral_backtest_spec.md  12_sandbox_platform_spec.md  13_easy_market_creation_spec.md  (+1 more)
(+174 files in other folders)
